[gd_scene load_steps=8 format=3 uid="uid://7t8yksj1dbhf"]

[ext_resource type="Script" path="res://main.gd" id="1_tw7s1"]
[ext_resource type="PackedScene" uid="uid://yyaj3k1cmcfm" path="res://player.tscn" id="1_vm42q"]
[ext_resource type="PackedScene" uid="uid://ov3n4e0cmnbq" path="res://obstacle_fish.tscn" id="2_pqwfw"]
[ext_resource type="Texture2D" uid="uid://p5pw5arj3jl8" path="res://art/1x1_#FFFFFFFF.png" id="4_0dutb"]
[ext_resource type="PackedScene" uid="uid://x3oe10u0lnm6" path="res://hud.tscn" id="4_8fpnk"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_pl85p"]
size = Vector2(84.5071, 179)

[sub_resource type="Curve2D" id="Curve2D_gw0ji"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 720, 0, 0, 0, 0, 0, 720, 480, 0, 0, 0, 0, 720, 0)
}
point_count = 3

[node name="Main" type="Node"]
script = ExtResource("1_tw7s1")
obstacle_scene = ExtResource("2_pqwfw")

[node name="Air" type="Area2D" parent="."]
scale = Vector2(8.52, 1)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Air"]
position = Vector2(42.2535, 89.5)
shape = SubResource("RectangleShape2D_pl85p")
debug_color = Color(0, 0.6, 0.701961, 0.490196)

[node name="Sprite2D" type="Sprite2D" parent="Air/CollisionShape2D"]
position = Vector2(-43.0751, -98.5)
scale = Vector2(87.0892, 201)
texture = ExtResource("4_0dutb")
centered = false

[node name="CanvasModulate" type="CanvasModulate" parent="Air/CollisionShape2D/Sprite2D"]
color = Color(0.678431, 1, 1, 1)

[node name="Water" type="ColorRect" parent="."]
offset_top = 179.0
offset_right = 720.0
offset_bottom = 480.0
color = Color(0.0352941, 0.427451, 1, 1)

[node name="Player" parent="." instance=ExtResource("1_vm42q")]
position = Vector2(-104, 40)
collision_mask = 3

[node name="ObstacleTimer" type="Timer" parent="."]
wait_time = 0.3

[node name="ScoreTimer" type="Timer" parent="."]

[node name="StartTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="StartPosition" type="Marker2D" parent="."]
position = Vector2(64, 224)
scale = Vector2(-14.2, -114)

[node name="ObstaclePath" type="Path2D" parent="."]
curve = SubResource("Curve2D_gw0ji")

[node name="ObstacleSpawnLocation" type="PathFollow2D" parent="ObstaclePath"]
position = Vector2(720, 0)
rotation = 1.5708

[node name="HUD" parent="." instance=ExtResource("4_8fpnk")]

[connection signal="area_entered" from="Player" to="Player" method="_on_area_entered"]
[connection signal="area_exited" from="Player" to="Player" method="_on_area_exited"]
[connection signal="hit" from="Player" to="." method="game_over"]
[connection signal="timeout" from="ObstacleTimer" to="." method="_on_obstacle_timer_timeout"]
[connection signal="timeout" from="ScoreTimer" to="." method="_on_score_timer_timeout"]
[connection signal="timeout" from="StartTimer" to="." method="_on_start_timer_timeout"]
[connection signal="start_game" from="HUD" to="." method="new_game"]
